Sandbox/force-app/main/default/objects/App__c/App__c.object-meta.xml
<CustomObject>
    <description>App alla quale un utente custom sarà collegato</description>
    <label>App</label>
    <nameField>
        <label>Nome App</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>