Sandbox/force-app/main/default/objects/App__c/fields/Apple_Store_Url__c.field-meta.xml
<CustomField>
    <fullName>Apple_Store_Url__c</fullName>
    <label>Apple Store Url</label>
    <type>Url</type>
</CustomField>