Sandbox/force-app/main/default/objects/App__c/fields/Contatto_Email__c.field-meta.xml
<CustomField>
    <fullName>Contatto_Email__c</fullName>
    <description>Contatto Email per informazioni app</description>
    <inlineHelpText>Contatto Email per informazioni app</inlineHelpText>
    <label>Contatto Email</label>
    <type>Email</type>
</CustomField>