Sandbox/force-app/main/default/objects/App__c/fields/Contatto_Telefonico__c.field-meta.xml
<CustomField>
    <fullName>Contatto_Telefonico__c</fullName>
    <description>Contatto telefonico di riferimento per l&apos;app</description>
    <inlineHelpText>Contatto telefonico di riferimento per l&apos;app</inlineHelpText>
    <label>Contatto Telefonico</label>
    <type>Phone</type>
</CustomField>