Sandbox/force-app/main/default/objects/App__c/fields/Descrizione_EN__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_EN__c</fullName>
    <label>Descrizione EN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>