Sandbox/force-app/main/default/objects/App__c/fields/Descrizione_IT__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_IT__c</fullName>
    <label>Descrizione IT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>