Sandbox/force-app/main/default/objects/App__c/fields/Google_Play_Store_Url__c.field-meta.xml
<CustomField>
    <fullName>Google_Play_Store_Url__c</fullName>
    <label>Google Play Store Url</label>
    <type>Url</type>
</CustomField>