Sandbox/force-app/main/default/objects/App__c/fields/Privacy_EN__c.field-meta.xml
<CustomField>
    <fullName>Privacy_EN__c</fullName>
    <label>Privacy EN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>