Sandbox/force-app/main/default/objects/App__c/fields/Privacy_IT__c.field-meta.xml
<CustomField>
    <fullName>Privacy_IT__c</fullName>
    <label>Privacy IT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>