Sandbox/force-app/main/default/objects/App__c/fields/Versione__c.field-meta.xml
<CustomField>
    <fullName>Versione__c</fullName>
    <label>Versione</label>
    <length>100</length>
    <type>Text</type>
</CustomField>