Sandbox/force-app/main/default/objects/App__c/fields/Versione_Android__c.field-meta.xml
<CustomField>
    <fullName>Versione_Android__c</fullName>
    <description>Versione e build android</description>
    <inlineHelpText>Versione e build android</inlineHelpText>
    <label>Versione Android</label>
    <length>40</length>
    <type>Text</type>
</CustomField>