Sandbox/force-app/main/default/objects/App__c/fields/Versione_IOS__c.field-meta.xml
<CustomField>
    <fullName>Versione_IOS__c</fullName>
    <description>Numero di versione e build ios</description>
    <inlineHelpText>Numero di versione e build ios</inlineHelpText>
    <label>Versione IOS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>